--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg navbar-light ">
             <div class="container-fluid">
                 <a class="navbar-brand brand-name" href="#">
-                    <img src="/images/samurai.png" alt="" width="50" height="50" class="d-inline-block "> WeebWorld
+                    <img src="images/samurai.png" alt="" width="50" height="50" class="d-inline-block "> WeebWorld
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -100,7 +100,7 @@
 
 
                 <div class="col-lg-6">
-                    <img src="/images/vippng.com-zero-two-png-3122067.png" class="img-fluid" alt="">
+                    <img src="images/vippng.com-zero-two-png-3122067.png" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
@@ -119,7 +119,7 @@
                 <hr>
                 <div class="row align-items-center">
                     <div class="col-md-2 ">
-                        <img src="/images/dragon-ball.jpg" class="img-fluid" alt="">
+                        <img src="images/dragon-ball.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-10">
                         <h3 id="DragonBall">
@@ -134,7 +134,7 @@
                     <hr>
 
                     <div class="col-md-2">
-                        <img src="/images/one-piece.jpg" class="img-fluid" alt="">
+                        <img src="images/one-piece.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-10">
                         <h3 id="One-Piece">
@@ -150,7 +150,7 @@
 
                     <hr>
                     <div class="col-md-2">
-                        <img src="/images/death-note.jpg" class="img-fluid" alt="">
+                        <img src="images/death-note.jpg" class="img-fluid" alt="">
 
                     </div>
                     <div class="col-md-10">
@@ -166,7 +166,7 @@
 
                     <hr>
                     <div class="col-md-2">
-                        <img src="/images/naruto.png" class="img-fluid" alt="">
+                        <img src="images/naruto.png" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-10">
                         <h3 id="Naruto">Naruto</h3>
@@ -180,7 +180,7 @@
 
 
                     <div class="col-md-2">
-                        <img src="/images/black-clover.jpg" class="img-fluid" alt="">
+                        <img src="images/black-clover.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-10">
                         <h3 id="Black-Clover">Black Clover</h3>
@@ -191,7 +191,7 @@
 
                     <hr>
                     <div class="col-md-2">
-                        <img src="/images/Full-metal.jpg" class="img-fluid" alt="">
+                        <img src="images/Full-metal.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-10">
                         <h3 id="FMA">Full Metal Alchemist</h3>
@@ -203,7 +203,7 @@
 
                     <hr>
                     <div class="col-md-2">
-                        <img src="/images/Aot.jpg" class="img-fluid" alt="">
+                        <img src="images/Aot.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-10">
                         <h3 id="AOT">Attack on Titans</h3>
@@ -216,7 +216,7 @@
 
                     <hr>
                     <div class="col-md-2">
-                        <img src="/images/Demon Slayer_ MBTI Of The Main Characters.png" class="img-fluid" alt="">
+                        <img src="images/Demon Slayer_ MBTI Of The Main Characters.png" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-10">
                         <h3 id="Demon-Slayer">Demon Slayer</h3>
@@ -228,7 +228,7 @@
 
                     <hr>
                     <div class="col-md-2">
-                        <img src="/images/SevenD.jpg" class="img-fluid" alt="">
+                        <img src="images/SevenD.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-10">
                         <h3 id="SDS">Seven Deadly Sins</h3>
@@ -240,7 +240,7 @@
 
                     <hr>
                     <div class="col-md-2">
-                        <img src="/images/DrStone.jpg" class="img-fluid" alt="">
+                        <img src="images/DrStone.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-10">
                         <h3 id="DrStone">Doctor Stone</h3>
