anchor tag now points to contact

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <a class="nav-link web-item" data-bs-toggle="collapse" href="#collapseExample" aria-current="page">Featured </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link web-item" aria-current="page" href="#">More About us</a>
+                            <a class="nav-link web-item" aria-current="page" href="#contact">More About us</a>
                         </li>
                     </ul>
                 </div>
