--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
                 <hr>
                 <div class="row align-items-center">
                     <div class="col-md-2 ">
-                        <img src="images/dragon-ball.jpg" class="img-fluid" alt="">
+                        <img src="images/dragon-ball.jpg" class="img-fluid" alt="" id="DragonBall">
                     </div>
                     <div class="col-md-10">
-                        <h3 id="DragonBall">
+                        <h3>
                             Dragon Ball
                         </h3>
                         <p>
@@ -134,10 +134,10 @@
                     <hr>
 
                     <div class="col-md-2">
-                        <img src="images/one-piece.jpg" class="img-fluid" alt="">
+                        <img src="images/one-piece.jpg" class="img-fluid" alt="" id="One-Piece">
                     </div>
                     <div class="col-md-10">
-                        <h3 id="One-Piece">
+                        <h3>
                             One Piece
                         </h3>
                         <p>
@@ -150,11 +150,11 @@
 
                     <hr>
                     <div class="col-md-2">
-                        <img src="images/death-note.jpg" class="img-fluid" alt="">
+                        <img src="images/death-note.jpg" class="img-fluid" alt="" id="Death-Note">
 
                     </div>
                     <div class="col-md-10">
-                        <h3 id=Death-Note>Death Note </h3>
+                        <h3>Death Note </h3>
                         <p>
                             Light Yagami a very bright student of Japan sees the world as a rotten place with people full of evils and criminals. The world really acknowledge his existence when a Shinigami gets bored from his realm and decides to venture out and drop a notebook
                             into the human world. It just so happens that Yagami finds the note book and realises that this is note any notebook. Any person's name you write in it shall die within the 40 seconds, provided the writer must know his face
@@ -166,10 +166,10 @@
 
                     <hr>
                     <div class="col-md-2">
-                        <img src="images/naruto.png" class="img-fluid" alt="">
+                        <img src="images/naruto.png" class="img-fluid" alt="" id="Naruto">
                     </div>
                     <div class="col-md-10">
-                        <h3 id="Naruto">Naruto</h3>
+                        <h3>Naruto</h3>
                         <p>
                             No matter what! HOKAGE NI NARU YO !! With these words a child Uzumaki Naruto, a ninja from the hidden leaf village Konoha faces insanely difficult challenges to fulfill his dream he once saw since his childhood. Each ninja is assigned a group and mentor.
                             Kakashi Hatake the mentor of Uzumaki Naruto , Uchiha Sasuke and Someone not relevant goes on to perform a simple task assigned to the village ninja groups. Soon they realise that this small task would make them see the face
@@ -180,10 +180,10 @@
 
 
                     <div class="col-md-2">
-                        <img src="images/black-clover.jpg" class="img-fluid" alt="">
+                        <img src="images/black-clover.jpg" class="img-fluid" alt="" id="Black-Clover">
                     </div>
                     <div class="col-md-10">
-                        <h3 id="Black-Clover">Black Clover</h3>
+                        <h3>Black Clover</h3>
                         <p>
                             In a world full of magic where evryone posses magical powers there exist a boy who can't harness the power of it and his desire is to become a wizard king. To accomplish this he trains himself and able to possess a magical book a help from another time.
                         </p>
@@ -191,10 +191,10 @@
 
                     <hr>
                     <div class="col-md-2">
-                        <img src="images/Full-metal.jpg" class="img-fluid" alt="">
+                        <img src="images/Full-metal.jpg" class="img-fluid" alt="" id="FMA">
                     </div>
                     <div class="col-md-10">
-                        <h3 id="FMA">Full Metal Alchemist</h3>
+                        <h3>Full Metal Alchemist</h3>
                         <p>
                             Two Brothers trying to revive their deceased mother through alchemy. Faces unforseen consequences because of the unbreakable law of alchemy. The Law of Equivalent Exchange. Edward Elric the elder brother and Alphonse Elric both of them loses parts of
                             their body or rather the whole body. Follow them through their journey to get back the body of Alphonse. Learning more about this exotic Science of alchemy.
@@ -203,10 +203,10 @@
 
                     <hr>
                     <div class="col-md-2">
-                        <img src="images/Aot.jpg" class="img-fluid" alt="">
+                        <img src="images/Aot.jpg" class="img-fluid" alt="" id="AOT">
                     </div>
                     <div class="col-md-10">
-                        <h3 id="AOT">Attack on Titans</h3>
+                        <h3>Attack on Titans</h3>
                         <p>
                             Shinzo wo Sasageyo!! Dedicate your Hearts like these soldiers of Survey Corps unit does to ellimante the greatest foes of humanity yet, The Titans. They look like humans but are gigantic in size some spanning a couple of meters more than human height
                             and some Towering even the 50 meters wall beyond which humanity cannot exist. Eren Yeager makes this his goal to eliminate every single Titan from the face of the earth. Initially a revenge saga soon turns into an unthinkable
@@ -216,10 +216,10 @@
 
                     <hr>
                     <div class="col-md-2">
-                        <img src="images/Demon Slayer_ MBTI Of The Main Characters.png" class="img-fluid" alt="">
+                        <img src="images/Demon Slayer_ MBTI Of The Main Characters.png" class="img-fluid" alt="" id="Demon-Slayer">
                     </div>
                     <div class="col-md-10">
-                        <h3 id="Demon-Slayer">Demon Slayer</h3>
+                        <h3>Demon Slayer</h3>
                         <p>
                             Humans and demons exist in a world and demons cannot move in sunlight. Tanjiro Kamado's family gets devoured by a demon his sister Nezuko Kamado who ends up being a demon too, Unlike other demons she can control her urge to kill and eat humans.Tanjiro
                             joins demon slayer corps to seek a cure for her sister. Meanwhile fighting demons and gaining more knowledge about these beings called 'demons'.
@@ -228,10 +228,10 @@
 
                     <hr>
                     <div class="col-md-2">
-                        <img src="images/SevenD.jpg" class="img-fluid" alt="">
+                        <img src="images/SevenD.jpg" class="img-fluid" alt="" id="SDS">
                     </div>
                     <div class="col-md-10">
-                        <h3 id="SDS">Seven Deadly Sins</h3>
+                        <h3>Seven Deadly Sins</h3>
                         <p>
                             Amidst the war between demons and angel a love story buds between Miliodas and Elizabeth. One being son of a Demon king and other Being a daughter of a God. Demon king puts a curse of immortality on Miliodas and Elizabeth is going to be reincarnated countless
                             times with no memories of her previous life Miliodas. Miliodas and his 7 demon friends representing each deadly sin now seeks a way to break this curse of Elizabeth so the the love story could Prosper.
@@ -242,8 +242,8 @@
                     <div class="col-md-2">
                         <img src="images/DrStone.jpg" class="img-fluid" alt="">
                     </div>
-                    <div class="col-md-10">
-                        <h3 id="DrStone">Doctor Stone</h3>
+                    <div class="col-md-10" id="DrStone">
+                        <h3>Doctor Stone</h3>
                         <p>
                             3000 years after earth was petrified due to a mysterious reason. Senku Ishigami a Doctor wakes from his peitrified state and he takes on the daunting task to turn the whole populationback to human form.
 
